MYD-3504 Add CI configuration

--- a/test/Audit.Integration.AspNetCore/Audit.Integration.AspNetCore.csproj
+++ b/test/Audit.Integration.AspNetCore/Audit.Integration.AspNetCore.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <StartupObject>Audit.Integration.AspNetCore.Program</StartupObject>
+    <Configurations>Debug;Release;CI</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
