--- a/test/Audit.DynamicProxy.UnitTest/Audit.DynamicProxy.UnitTest.csproj
+++ b/test/Audit.DynamicProxy.UnitTest/Audit.DynamicProxy.UnitTest.csproj
@@ -14,6 +14,7 @@
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
     <DebugType Condition=" '$(TargetFramework)' == 'net451' ">Full</DebugType>
+    <Configurations>Debug;Release;CI</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
