--- a/test/Audit.Mvc.UnitTest/Audit.Mvc.UnitTest.csproj
+++ b/test/Audit.Mvc.UnitTest/Audit.Mvc.UnitTest.csproj
@@ -18,6 +18,7 @@
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
     <DebugType Condition=" '$(TargetFramework)' != 'netcoreapp1.0' And '$(TargetFramework)' != 'netcoreapp2.0'">Full</DebugType>
+    <Configurations>Debug;Release;CI</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
