--- a/src/Audit.EntityFramework.Core/Audit.EntityFramework.Core.csproj
+++ b/src/Audit.EntityFramework.Core/Audit.EntityFramework.Core.csproj
@@ -4,7 +4,7 @@
     <Description>Generate Audit Logs from EntityFramework context changes</Description>
     <Copyright>Copyright 2016</Copyright>
     <AssemblyTitle>Audit.EntityFramework.Core</AssemblyTitle>
-    <VersionPrefix>12.0.0</VersionPrefix>
+    <Version>12.0.0</Version>
     <Authors>Federico Colombo</Authors>
     <TargetFrameworks>netstandard1.5;netstandard2.0;net461</TargetFrameworks>
     <DefineConstants>$(DefineConstants);STRONG_NAME</DefineConstants>
@@ -14,7 +14,7 @@
     <AssemblyOriginatorKeyFile>../StrongName/Audit.NET.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>true</SignAssembly>
     <PublicSign Condition=" '$(OS)' != 'Windows_NT' ">true</PublicSign>
-    <PackageId>Audit.EntityFramework.Core</PackageId>
+    <PackageId>Collabco.Audit.EntityFramework.Core</PackageId>
     <PackageTags>Audit;Trail;Log;EntityFramework;Core</PackageTags>
     <PackageIconUrl>http://i.imgur.com/T3NcXaZ.png</PackageIconUrl>
     <PackageProjectUrl>https://github.com/thepirat000/Audit.NET/tree/master/src/Audit.EntityFramework</PackageProjectUrl>
