--- a/src/Audit.FileSystem/Audit.FileSystem.csproj
+++ b/src/Audit.FileSystem/Audit.FileSystem.csproj
@@ -4,7 +4,7 @@
     <Description>Generate Audit Logs from file system events using a FileSystemWatcher</Description>
     <Copyright>Copyright 2018</Copyright>
     <AssemblyTitle>Audit.FileSystem</AssemblyTitle>
-    <VersionPrefix>12.0.0</VersionPrefix>
+    <Version>12.0.0</Version>
     <Authors>Federico Colombo</Authors>
     <TargetFrameworks>netstandard1.3;net45</TargetFrameworks>
     <DefineConstants>$(DefineConstants);STRONG_NAME</DefineConstants>
@@ -14,7 +14,7 @@
     <AssemblyOriginatorKeyFile>../StrongName/Audit.NET.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>true</SignAssembly>
     <PublicSign Condition=" '$(OS)' != 'Windows_NT' ">true</PublicSign>
-    <PackageId>Audit.FileSystem</PackageId>
+    <PackageId>Collabco.Audit.FileSystem</PackageId>
     <PackageTags>Audit;File System;Log;FileSystemWatcher</PackageTags>
     <PackageIconUrl>https://i.imgur.com/Fn4thn0.png</PackageIconUrl>
     <PackageProjectUrl>https://github.com/thepirat000/Audit.NET/tree/master/src/Audit.FileSystem</PackageProjectUrl>
