--- a/src/Audit.NET.AzureDocumentDB/Audit.NET.AzureDocumentDB.csproj
+++ b/src/Audit.NET.AzureDocumentDB/Audit.NET.AzureDocumentDB.csproj
@@ -4,7 +4,7 @@
     <Description>Store Audit.NET Trail Logs into an Azure Document DB database</Description>
     <Copyright>Copyright 2016</Copyright>
     <AssemblyTitle>Audit.AzureDocumentDB</AssemblyTitle>
-    <VersionPrefix>12.0.0</VersionPrefix>
+    <Version>12.0.0</Version>
     <Authors>Federico Colombo</Authors>
     <TargetFrameworks>net45;netstandard1.6</TargetFrameworks>
     <DefineConstants>$(DefineConstants);STRONG_NAME</DefineConstants>
@@ -14,7 +14,7 @@
     <AssemblyOriginatorKeyFile>../StrongName/Audit.NET.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>true</SignAssembly>
     <PublicSign Condition=" '$(OS)' != 'Windows_NT' ">true</PublicSign>
-    <PackageId>Audit.NET.AzureDocumentDB</PackageId>
+    <PackageId>Collabco.Audit.NET.AzureDocumentDB</PackageId>
     <PackageTags>Audit;Trail;Log;Azure;DocumentDB</PackageTags>
     <PackageIconUrl>http://i.imgur.com/yeBZZiP.png</PackageIconUrl>
     <PackageProjectUrl>https://github.com/thepirat000/Audit.NET/tree/master/src/Audit.NET.AzureDocumentDB</PackageProjectUrl>
