--- a/src/Audit.NET.AzureStorage/Audit.NET.AzureStorage.csproj
+++ b/src/Audit.NET.AzureStorage/Audit.NET.AzureStorage.csproj
@@ -4,7 +4,7 @@
     <Description>Store Audit.NET Logs into an Azure Blob Storage</Description>
     <Copyright>Copyright 2016</Copyright>
     <AssemblyTitle>Audit.AzureStorage</AssemblyTitle>
-    <VersionPrefix>12.0.0</VersionPrefix>
+    <Version>12.0.0</Version>
     <Authors>Federico Colombo</Authors>
     <TargetFrameworks>netstandard1.3;net45</TargetFrameworks>
     <DefineConstants>$(DefineConstants);STRONG_NAME</DefineConstants>
@@ -14,7 +14,7 @@
     <AssemblyOriginatorKeyFile>../StrongName/Audit.NET.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>true</SignAssembly>
     <PublicSign Condition=" '$(OS)' != 'Windows_NT' ">true</PublicSign>
-    <PackageId>Audit.NET.AzureStorage</PackageId>
+    <PackageId>Collabco.Audit.NET.AzureStorage</PackageId>
     <PackageTags>Audit;Trail;Log;Azure;Blob;BlobStorage</PackageTags>
     <PackageIconUrl>http://i.imgur.com/ouaw5CX.png</PackageIconUrl>
     <PackageProjectUrl>https://github.com/thepirat000/Audit.NET/tree/master/src/Audit.NET.AzureStorage</PackageProjectUrl>
