--- a/src/Audit.NET.MongoDB/Audit.NET.MongoDB.csproj
+++ b/src/Audit.NET.MongoDB/Audit.NET.MongoDB.csproj
@@ -4,13 +4,13 @@
     <Description>Store Audit.NET Trail Logs into a MongoDB database</Description>
     <Copyright>Copyright 2016</Copyright>
     <AssemblyTitle>Audit.MongoDB</AssemblyTitle>
-    <VersionPrefix>12.0.0</VersionPrefix>
+    <Version>12.0.0</Version>
     <Authors>Federico Colombo</Authors>
     <TargetFrameworks>netstandard1.5;net45</TargetFrameworks>
     <NoWarn>$(NoWarn);1591</NoWarn>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <AssemblyName>Audit.NET.MongoDB</AssemblyName>
-    <PackageId>Audit.NET.MongoDB</PackageId>
+    <PackageId>Collabco.Audit.NET.MongoDB</PackageId>
     <PackageTags>Audit;Trail;Log;MongoDB</PackageTags>
     <PackageIconUrl>http://i.imgur.com/1nMVLQo.png</PackageIconUrl>
     <PackageProjectUrl>https://github.com/thepirat000/Audit.NET/tree/master/src/Audit.NET.MongoDB</PackageProjectUrl>
