--- a/src/Audit.NET.MySql/Audit.NET.MySql.csproj
+++ b/src/Audit.NET.MySql/Audit.NET.MySql.csproj
@@ -4,7 +4,7 @@
     <Description>Store Audit.NET Trail Logs into a MySQL database</Description>
     <Copyright>Copyright 2016</Copyright>
     <AssemblyTitle>Audit.MySql</AssemblyTitle>
-    <VersionPrefix>12.0.0</VersionPrefix>
+    <Version>12.0.0</Version>
     <Authors>Federico Colombo</Authors>
     <TargetFrameworks>netcoreapp1.0;net451</TargetFrameworks>
     <DefineConstants>$(DefineConstants);STRONG_NAME</DefineConstants>
@@ -14,7 +14,7 @@
     <AssemblyOriginatorKeyFile>../StrongName/Audit.NET.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>true</SignAssembly>
     <PublicSign Condition=" '$(OS)' != 'Windows_NT' ">true</PublicSign>
-    <PackageId>Audit.NET.MySql</PackageId>
+    <PackageId>Collabco.Audit.NET.MySql</PackageId>
     <PackageTags>Audit;Trail;Log;MySQL</PackageTags>
     <PackageIconUrl>http://i.imgur.com/NHRBp86.png</PackageIconUrl>
     <PackageProjectUrl>https://github.com/thepirat000/Audit.NET/tree/master/src/Audit.NET.MySql</PackageProjectUrl>
