--- a/src/Audit.NET.PostgreSql/Audit.NET.PostgreSql.csproj
+++ b/src/Audit.NET.PostgreSql/Audit.NET.PostgreSql.csproj
@@ -3,7 +3,7 @@
     <Description>Store Audit.NET Trail Logs into a PostgreSQL database</Description>
     <Copyright>Copyright 2017</Copyright>
     <AssemblyTitle>Audit.PostgreSql</AssemblyTitle>
-    <VersionPrefix>12.0.0</VersionPrefix>
+    <Version>12.0.0</Version>
     <Authors>Federico Colombo</Authors>
     <TargetFrameworks>netstandard2.0;netstandard1.3;net45</TargetFrameworks>
     <DefineConstants>$(DefineConstants);STRONG_NAME</DefineConstants>
@@ -13,7 +13,7 @@
     <AssemblyOriginatorKeyFile>../StrongName/Audit.NET.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>true</SignAssembly>
     <PublicSign Condition=" '$(OS)' != 'Windows_NT' ">true</PublicSign>
-    <PackageId>Audit.NET.PostgreSql</PackageId>
+    <PackageId>Collabco.Audit.NET.PostgreSql</PackageId>
     <PackageTags>Audit;Trail;Log;Postgres;PostgreSQL</PackageTags>
     <PackageIconUrl>https://i.imgur.com/ZxbDxAU.png</PackageIconUrl>
     <PackageProjectUrl>https://github.com/thepirat000/Audit.NET/tree/master/src/Audit.NET.PostgreSql</PackageProjectUrl>
