--- a/src/Audit.NET.Redis/Audit.NET.Redis.csproj
+++ b/src/Audit.NET.Redis/Audit.NET.Redis.csproj
@@ -4,7 +4,7 @@
     <Description>Store Audit.NET Trail Logs in a Redis database as a strings, lists, hashes, sortedsets or pubsub</Description>
     <Copyright>Copyright 2017</Copyright>
     <AssemblyTitle>Audit.Redis</AssemblyTitle>
-    <VersionPrefix>12.0.0</VersionPrefix>
+    <Version>12.0.0</Version>
     <Authors>Federico Colombo</Authors>
     <TargetFrameworks>netstandard1.5;net45</TargetFrameworks>
     <DefineConstants>$(DefineConstants);STRONG_NAME</DefineConstants>
@@ -14,7 +14,7 @@
     <AssemblyOriginatorKeyFile>../StrongName/Audit.NET.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>true</SignAssembly>
     <PublicSign Condition=" '$(OS)' != 'Windows_NT' ">true</PublicSign>
-    <PackageId>Audit.NET.Redis</PackageId>
+    <PackageId>Collabco.Audit.NET.Redis</PackageId>
     <PackageTags>Audit;Trail;Log;Redis</PackageTags>
     <PackageIconUrl>http://i.imgur.com/abs6duI.png</PackageIconUrl>
     <PackageProjectUrl>https://github.com/thepirat000/Audit.NET/tree/master/src/Audit.NET.Redis</PackageProjectUrl>
