--- a/src/Audit.NET.SqlServer/Audit.NET.SqlServer.csproj
+++ b/src/Audit.NET.SqlServer/Audit.NET.SqlServer.csproj
@@ -4,7 +4,7 @@
     <Description>Store Audit.NET Trail Logs into a SQL Server database</Description>
     <Copyright>Copyright 2016</Copyright>
     <AssemblyTitle>Audit.SqlServer</AssemblyTitle>
-    <VersionPrefix>12.0.0</VersionPrefix>
+    <Version>12.0.0</Version>
     <Authors>Federico Colombo</Authors>
     <TargetFrameworks>netstandard2.0;netstandard1.3;net45</TargetFrameworks>
     <DefineConstants>$(DefineConstants);STRONG_NAME</DefineConstants>
@@ -14,7 +14,7 @@
     <AssemblyOriginatorKeyFile>../StrongName/Audit.NET.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>true</SignAssembly>
     <PublicSign Condition=" '$(OS)' != 'Windows_NT' ">true</PublicSign>
-    <PackageId>Audit.NET.SqlServer</PackageId>
+    <PackageId>Collabco.Audit.NET.SqlServer</PackageId>
     <PackageTags>Audit;Trail;Log;SQL;SqlServer</PackageTags>
     <PackageIconUrl>http://i.imgur.com/lmzs1gw.png</PackageIconUrl>
     <PackageProjectUrl>https://github.com/thepirat000/Audit.NET/tree/master/src/Audit.NET.SqlServer</PackageProjectUrl>
