--- a/src/Audit.NET.Udp/Audit.NET.Udp.csproj
+++ b/src/Audit.NET.Udp/Audit.NET.Udp.csproj
@@ -4,7 +4,7 @@
     <Description>Send Audit.NET Trail Logs as connectionless UDP datagrams to a remote host or a multicast group</Description>
     <Copyright>Copyright 2017</Copyright>
     <AssemblyTitle>Audit.Udp</AssemblyTitle>
-    <VersionPrefix>12.0.0</VersionPrefix>
+    <Version>12.0.0</Version>
     <Authors>Federico Colombo</Authors>
     <TargetFrameworks>netstandard1.3;net45</TargetFrameworks>
     <DefineConstants>$(DefineConstants);STRONG_NAME</DefineConstants>
@@ -14,7 +14,7 @@
     <AssemblyOriginatorKeyFile>../StrongName/Audit.NET.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>true</SignAssembly>
     <PublicSign Condition=" '$(OS)' != 'Windows_NT' ">true</PublicSign>
-    <PackageId>Audit.NET.Udp</PackageId>
+    <PackageId>Collabco.Audit.NET.Udp</PackageId>
     <PackageTags>Audit;Trail;Log;UDP</PackageTags>
     <PackageIconUrl>http://i.imgur.com/pMNmmpH.png</PackageIconUrl>
     <PackageProjectUrl>https://github.com/thepirat000/Audit.NET/tree/master/src/Audit.NET.Udp</PackageProjectUrl>
