--- a/src/Audit.NET.log4net/Audit.NET.log4net.csproj
+++ b/src/Audit.NET.log4net/Audit.NET.log4net.csproj
@@ -4,7 +4,7 @@
     <Description>Log Audit.NET Audit Trail using Apache log4net™</Description>
     <Copyright>Copyright 2017</Copyright>
     <AssemblyTitle>Audit.log4net</AssemblyTitle>
-    <VersionPrefix>12.0.0</VersionPrefix>
+    <Version>12.0.0</Version>
     <Authors>Federico Colombo</Authors>
     <TargetFrameworks>netstandard1.3;net45</TargetFrameworks>
     <DefineConstants>$(DefineConstants);STRONG_NAME</DefineConstants>
@@ -14,7 +14,7 @@
     <AssemblyOriginatorKeyFile>../StrongName/Audit.NET.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>true</SignAssembly>
     <PublicSign Condition=" '$(OS)' != 'Windows_NT' ">true</PublicSign>
-    <PackageId>Audit.NET.log4net</PackageId>
+    <PackageId>Collabco.Audit.NET.log4net</PackageId>
     <PackageTags>Audit;Trail;Log;log4net</PackageTags>
     <PackageIconUrl>https://i.imgur.com/qxbK98k.png</PackageIconUrl>
     <PackageProjectUrl>https://github.com/thepirat000/Audit.NET/tree/master/src/Audit.NET.log4net</PackageProjectUrl>
