--- a/src/Audit.SignalR/Audit.SignalR.csproj
+++ b/src/Audit.SignalR/Audit.SignalR.csproj
@@ -3,7 +3,7 @@
     <Description>Generate Audit Logs for ASP.NET SignalR invokations</Description>
     <Copyright>Copyright 2016</Copyright>
     <AssemblyTitle>Audit.SignalR</AssemblyTitle>
-    <VersionPrefix>12.0.0</VersionPrefix>
+    <Version>12.0.0</Version>
     <Authors>Federico Colombo</Authors>
     <TargetFramework>net45</TargetFramework>
     <DefineConstants>$(DefineConstants);STRONG_NAME</DefineConstants>
@@ -13,7 +13,7 @@
     <AssemblyOriginatorKeyFile>../StrongName/Audit.NET.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>true</SignAssembly>
     <PublicSign Condition=" '$(OS)' != 'Windows_NT' ">true</PublicSign>
-    <PackageId>Audit.SignalR</PackageId>
+    <PackageId>Collabco.Audit.SignalR</PackageId>
     <PackageTags>Audit;SignalR;Trail;Log</PackageTags>
     <PackageIconUrl>https://i.imgur.com/GB2e52X.jpg</PackageIconUrl>
     <PackageProjectUrl>https://github.com/thepirat000/Audit.NET/tree/master/src/Audit.SignalR#auditsignalr</PackageProjectUrl>
