--- a/src/Audit.WCF/Audit.WCF.csproj
+++ b/src/Audit.WCF/Audit.WCF.csproj
@@ -4,7 +4,7 @@
     <Description>Generate detailed Audit Logs for WCF service calls.</Description>
     <Copyright>Copyright 2016</Copyright>
     <AssemblyTitle>Audit.Wcf</AssemblyTitle>
-    <VersionPrefix>12.0.0</VersionPrefix>
+    <Version>12.0.0</Version>
     <Authors>Federico Colombo</Authors>
     <TargetFramework>net45</TargetFramework>
     <DefineConstants>$(DefineConstants);STRONG_NAME</DefineConstants>
@@ -14,7 +14,7 @@
     <AssemblyOriginatorKeyFile>../StrongName/Audit.NET.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>true</SignAssembly>
     <PublicSign Condition=" '$(OS)' != 'Windows_NT' ">true</PublicSign>
-    <PackageId>Audit.WCF</PackageId>
+    <PackageId>Collabco.Audit.WCF</PackageId>
     <PackageTags>Audit;Trail;Log;WCF</PackageTags>
     <PackageIconUrl>http://i.imgur.com/Sl1hHBz.png</PackageIconUrl>
     <PackageProjectUrl>https://github.com/thepirat000/Audit.NET/tree/master/src/Audit.WCF</PackageProjectUrl>
